--- a/src/styles/style.less
+++ b/src/styles/style.less
@@ -1,11 +1,19 @@
 
+@font-face {
+    font-family: 'PT Sans';
+    src: url('https://fonts.googleapis.com/css2?family=PT+Sans:wght@400;700&display=swap');
+}
+
 * {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family: 'PT Sans', sans-serif;
     font-size: 18px;
 }
+
+@white: #FFF;
+@grey: #0F0F0F;
 
 
 /* ----------------------------- Header Section ---------------------------- */
@@ -15,9 +23,14 @@
     display: flex;
     top: 0;
     width: 100%;
-    padding: 0 15px;
+    padding: 0 30px;
     align-items: center;
-    background-color: #0F0F0F;    
+    background-color: @grey;
+    
+    img {
+        padding: 12px 16px;
+        border: 3px solid @white;
+    }
 }
 
 #nav-bar {
@@ -30,12 +43,13 @@
 
     a {
         display: block;
-        padding: 24px 25px;
+        padding: 26px 30px;
         text-decoration: none;    
-        color: #FFFFFF;
+        color: @white;
+        transition: .2s;
         &:hover {
-            background-color: #1F1F1F;
-        }        
+            background-color: lighten(@grey, 8%);
+        }
     }
 }
 
@@ -44,6 +58,52 @@
 
 #main {
     margin-top: 72px;
+}
+
+
+#first-screen {
+    .flex-container() {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .flex-container();
+    width: 100%;
+    height: 810px;
+    background-image: url(../img/first-screen.jpg);
+    background-position: center;
+    
+    #logo-container {
+        .flex-container();        
+        width: 320px;
+        height: 320px;
+        margin-bottom: 80px;
+        border: 4px solid @white;
+
+        img {
+            padding-bottom: 16px;
+            border-bottom: 2px solid @white;
+            margin-bottom: 8px;
+        }
+    
+        p {
+            font-size: 26px;
+            letter-spacing: 1px;
+            color: @white;
+        }
+    }
+
+    > p {
+        width: 50%;
+        text-align: center;
+        font-size: 18px;
+        line-height: 1.4;
+        word-spacing: 1px;
+        letter-spacing: 1px;
+        color: @white;
+    }    
 }
 
 #form {
