--- a/src/styles/style.less
+++ b/src/styles/style.less
@@ -12,6 +12,10 @@
     font-size: 18px;
 }
 
+html {
+    scroll-behavior: smooth;
+}
+
 @white: #FFF;
 @grey: #0F0F0F;
 
@@ -26,6 +30,7 @@
     padding: 0 30px;
     align-items: center;
     background-color: @grey;
+    box-shadow: 0px 3px 20px -4px @grey;
     
     img {
         padding: 12px 16px;
@@ -44,7 +49,7 @@
     a {
         display: block;
         padding: 26px 30px;
-        text-decoration: none;    
+        text-decoration: none;
         color: @white;
         transition: .2s;
         &:hover {
@@ -106,20 +111,134 @@
     }    
 }
 
-#form {
-    width: fit-content;
-    margin: 0 auto;
 
-    input {
-        display: block;
-        margin: 15px auto;
+.container() {
+    width: 1200px;
+    margin: -30px auto 0;
+}
+
+.header() {
+    h2 {
+        padding: 90px 0 10px;
+        
+        a {
+            color: @grey;
+            font-size: 28px;
+            font-weight: 700;        
+            text-decoration: none;
+            &:hover {
+                text-decoration: underline;
+            }
+        }
+    }
+}
+
+
+#fashion {
+    .container();
+    .header();
+
+    #video {
+        width: min-content;
+        margin: 30px auto 0;
+    }
+}
+
+
+.button() {
+    border: 1px solid lighten(@grey, 30%);
+    border-radius: 3px;
+    color: lighten(@grey, 30%);
+    font-size: 20px;
+    text-decoration: none;
+
+    transition: border-color, color .2s;
+
+    &:hover {
+        border-color: @grey;
+        color: @grey;
+    }
+}
+
+#collections {
+    .container();
+    .header();
+
+    .collection {
+        display: flex;
+        margin: 30px 0;
+
+        .info {
+            display: flex;
+            flex-direction: column;
+
+            flex-grow: 1;
+            padding: 20px 30px;
+
+            h3 {
+                margin: 10px 0;
+                font-size: 24px;
+            }
+
+            h4 {
+                margin: 16px 0 10px;
+            }
+            .price {
+                font-weight: 700;
+            }
+            .last-price span {
+                text-decoration: line-through;
+                font-style: italic;
+            }
+
+            .action {
+                display: block;
+                margin: auto auto 0 0;
+                padding: 5px 12px;
+
+                .button();
+            }
+        }
+    }
+}
+
+
+#learn-more {
+    .container();
+    .header();
+
+    .instructions {
+        width: 80%;
+        margin: 30px auto;
+        text-align: center;        
     }
 
-    #email {
-        padding: 5px;
-    }
+    #form {
+        width: fit-content;
+        margin: 0 auto;
+    
+        input {
+            display: block;
+            margin: 15px auto;
+        }
+    
+        #email {
+            padding: 5px;
+        }
+    
+        #submit {
+            .button();
 
-    #submit {
-        padding: 2px 10px;
+            padding: 4px 14px;
+            cursor: pointer;
+            background-color: transparent;
+        }
     }
+}
+
+footer {
+    height: 200px;
+    margin-top: 50px;
+    background-color: lighten(@grey, 5%);
+    box-shadow: 0 0 14px -4px @grey;
 }
