--- a/src/styles/style.less
+++ b/src/styles/style.less
@@ -24,6 +24,7 @@ html {
 
 #header {
     position: fixed;
+    z-index: 10;
     display: flex;
     top: 0;
     width: 100%;
@@ -46,9 +47,9 @@ html {
         list-style-type: none;
     }
 
-    a {
+    .nav-link {
         display: block;
-        padding: 26px 30px;
+        padding: 28px 32px;
         text-decoration: none;
         color: @white;
         transition: .2s;
@@ -59,12 +60,7 @@ html {
 }
 
 
-/* ------------------------------ Main Section ----------------------------- */
-
-#main {
-    margin-top: 72px;
-}
-
+/* ---------------------------------- Main --------------------------------- */
 
 #first-screen {
     .flex-container() {
@@ -77,8 +73,10 @@ html {
     .flex-container();
     width: 100%;
     height: 810px;
+    padding-top: 77px;
     background-image: url(../img/first-screen.jpg);
     background-position: center;
+    background-clip: content-box;
     
     #logo-container {
         .flex-container();        
@@ -112,40 +110,51 @@ html {
 }
 
 
-.container() {
+.container {
     width: 1200px;
-    margin: -30px auto 0;
+    margin: -50px auto 40px;    
 }
 
-.header() {
-    h2 {
-        padding: 90px 0 10px;
-        
-        a {
-            color: @grey;
-            font-size: 28px;
-            font-weight: 700;        
-            text-decoration: none;
-            &:hover {
-                text-decoration: underline;
+.header {
+    padding: 110px 0 10px;
+
+    a {
+        position: relative;
+        font-size: 28px;
+        font-weight: 700;
+        color: @grey;
+        text-decoration: none;
+        &:hover {
+            text-decoration: underline;
+            &::before {
+                opacity: 1;
+                text-decoration: none;
             }
+        }
+
+        &::before {
+            content: '#';
+            position: absolute;
+            left: -22px;
+            opacity: 0;
+            transition: .2s;
         }
     }
 }
 
-
-#fashion {
-    .container();
-    .header();
-
-    #video {
-        width: min-content;
-        margin: 30px auto 0;
-    }
+hr {
+    width: 95%;
+    margin: 0 auto;
+    border-style: groove;
+    color: lighten(@grey, 10%);
 }
 
+#video-container {
+    width: min-content;
+    margin: 30px auto 0;
+}
 
-.button() {
+.button {
     border: 1px solid lighten(@grey, 30%);
     border-radius: 3px;
     color: lighten(@grey, 30%);
@@ -160,85 +169,96 @@ html {
     }
 }
 
-#collections {
-    .container();
-    .header();
 
-    .collection {
+.collection {
+    display: flex;
+    margin: 30px 0;
+
+    .info {
         display: flex;
-        margin: 30px 0;
+        flex-direction: column;
 
-        .info {
-            display: flex;
-            flex-direction: column;
+        flex-grow: 1;
+        padding: 0 30px 20px;
 
-            flex-grow: 1;
-            padding: 20px 30px;
-
-            h3 {
-                margin: 10px 0;
-                font-size: 24px;
-            }
-
-            h4 {
-                margin: 16px 0 10px;
-            }
-            .price {
-                font-weight: 700;
-            }
-            .last-price span {
-                text-decoration: line-through;
-                font-style: italic;
-            }
-
-            .action {
-                display: block;
-                margin: auto auto 0 0;
-                padding: 5px 12px;
-
-                .button();
-            }
+        h3 {
+            margin: 15px 0;
+            font-size: 24px;
         }
-    }
-}
 
+        h4 {
+            margin: 16px 0 10px;
+        }
+        .price {
+            font-weight: 700;
+        }
+        .last-price span {
+            text-decoration: line-through;
+            font-style: italic;
+        }
 
-#learn-more {
-    .container();
-    .header();
-
-    .instructions {
-        width: 80%;
-        margin: 30px auto;
-        text-align: center;        
-    }
-
-    #form {
-        width: fit-content;
-        margin: 0 auto;
-    
-        input {
+        .action {
             display: block;
-            margin: 15px auto;
-        }
-    
-        #email {
-            padding: 5px;
-        }
-    
-        #submit {
-            .button();
-
-            padding: 4px 14px;
-            cursor: pointer;
-            background-color: transparent;
+            margin: auto auto 0 0;
+            padding: 5px 12px;
         }
     }
 }
+
+
+.instruction {
+    width: 80%;
+    margin: 30px auto 40px;
+    text-align: center;        
+}
+
+#form {
+    width: fit-content;
+    margin: 0 auto;
+
+    input {
+        display: block;
+        margin: 15px auto;
+    }
+
+    #email {
+        padding: 5px;
+    }
+
+    #submit {
+        padding: 4px 14px;
+        cursor: pointer;
+        background-color: transparent;
+    }
+}
+
+
+/* ----------------------------- Footer Section ---------------------------- */
 
 footer {
+    display: flex;
     height: 200px;
-    margin-top: 50px;
+    flex-direction: column;
+    justify-content: flex-end;
+    align-items: center;
     background-color: lighten(@grey, 5%);
     box-shadow: 0 0 14px -4px @grey;
+
+    p {
+        margin-bottom: 20px;
+        color: @white;
+    }
+
+    a {
+        padding: 3px;
+        margin-bottom: 24px;
+        
+        img {
+            filter: brightness(1);
+            transition: .2s;
+        }
+        &:hover img {
+            filter: brightness(.85);
+        }
+    }
 }
