--- a/src/styles/style.less
+++ b/src/styles/style.less
@@ -74,7 +74,7 @@ html {
     width: 100%;
     height: 810px;
     padding-top: 77px;
-    background-image: url(../img/first-screen.jpg);
+    background-image: url('../img/first-screen.jpg');
     background-position: center;
     background-clip: content-box;
     
@@ -112,11 +112,24 @@ html {
 
 .container {
     width: 1200px;
-    margin: -50px auto 40px;    
+    margin: -70px auto 40px;
+    
+    @media screen and (max-width: 1220px) {
+        & { width: 1000px; }
+    }
+    @media screen and (max-width: 1020px) {
+        & { width: 800px; }
+    }
+    @media screen and (max-width: 820px) {
+        & { width: 400px; }
+    }
 }
 
 .header {
     padding: 110px 0 10px;
+    @media screen and (max-width: 820px) {
+        &, + p { text-align: center; }
+    }
 
     a {
         position: relative;
@@ -149,10 +162,20 @@ hr {
     color: lighten(@grey, 10%);
 }
 
-#video-container {
-    width: min-content;
+
+#video {
+    display: block;
     margin: 30px auto 0;
+    width: 720px;
+    height: 405px;
+    @media screen and (max-width: 820px) {
+        & {
+            width: 400px;
+            height: 225px;
+        }
+    }
 }
+
 
 .button {
     border: 1px solid lighten(@grey, 30%);
@@ -172,6 +195,17 @@ hr {
 
 .collection {
     display: flex;
+
+    @media screen and (min-width: 821px) {
+        flex-direction: row;
+        &:nth-of-type(odd) {
+            flex-direction: row-reverse;
+        }
+    }
+    @media screen and (max-width: 820px) {
+        & { flex-direction: column; }
+    }
+
     margin: 30px 0;
 
     .info {
@@ -184,17 +218,28 @@ hr {
         h3 {
             margin: 15px 0;
             font-size: 24px;
+            @media screen and (max-width: 820px) {
+                & { text-align: center; }
+            }
         }
 
         h4 {
             margin: 16px 0 10px;
+            @media screen and (max-width: 820px) {
+                & { margin-bottom: 0; }
+            }
         }
+
         .price {
+            margin: 10px 0;
             font-weight: 700;
-        }
-        .last-price span {
-            text-decoration: line-through;
-            font-style: italic;
+
+            sup {
+                padding: 2px;
+                color: lighten(@grey, 30%);
+                font-size: smaller;
+                font-style: italic;
+            }
         }
 
         .action {
