--- a/src/styles/style.less
+++ b/src/styles/style.less
@@ -1,4 +1,6 @@
 
+/* ------------------------------ Base styles ------------------------------ */
+
 @font-face {
     font-family: 'PT Sans';
     src: url('https://fonts.googleapis.com/css2?family=PT+Sans:wght@400;700&display=swap');
@@ -20,7 +22,77 @@ html {
 @grey: #0F0F0F;
 
 
-/* ----------------------------- Header Section ---------------------------- */
+/* ------------------------- Common elements styles ------------------------ */
+
+.container {
+    width: 1200px;
+    margin: -70px auto 40px;
+    
+    @media screen and (max-width: 1220px) {
+        & { width: 1000px; }
+    }
+    @media screen and (max-width: 1020px) {
+        & { width: 800px; }
+    }
+    @media screen and (max-width: 820px) {
+        & { width: 400px; }
+    }
+}
+
+.header {
+    padding: 110px 0 10px;
+    @media screen and (max-width: 820px) {
+        &, + p { text-align: center; }
+    }
+
+    a {
+        position: relative;
+        font-size: 28px;
+        font-weight: 700;
+        color: @grey;
+        text-decoration: none;
+        &:hover {
+            text-decoration: underline;
+            &::before {
+                opacity: 1;
+                text-decoration: none;
+            }
+        }
+
+        &::before {
+            content: '#';
+            position: absolute;
+            left: -22px;
+            opacity: 0;
+            transition: .2s;
+        }
+    }
+}
+
+hr {
+    width: 95%;
+    margin: 0 auto;
+    border-style: groove;
+    color: lighten(@grey, 10%);
+}
+
+.button {
+    border: 1px solid lighten(@grey, 30%);
+    border-radius: 3px;
+    color: lighten(@grey, 30%);
+    font-size: 20px;
+    text-decoration: none;
+
+    transition: border-color, color .2s;
+
+    &:hover {
+        border-color: @grey;
+        color: @grey;
+    }
+}
+
+
+/* --------------------------------- Header -------------------------------- */
 
 #header {
     position: fixed;
@@ -79,7 +151,7 @@ html {
     background-clip: content-box;
     
     #logo-container {
-        .flex-container();        
+        .flex-container();
         width: 320px;
         height: 320px;
         margin-bottom: 80px;
@@ -109,60 +181,6 @@ html {
     }    
 }
 
-
-.container {
-    width: 1200px;
-    margin: -70px auto 40px;
-    
-    @media screen and (max-width: 1220px) {
-        & { width: 1000px; }
-    }
-    @media screen and (max-width: 1020px) {
-        & { width: 800px; }
-    }
-    @media screen and (max-width: 820px) {
-        & { width: 400px; }
-    }
-}
-
-.header {
-    padding: 110px 0 10px;
-    @media screen and (max-width: 820px) {
-        &, + p { text-align: center; }
-    }
-
-    a {
-        position: relative;
-        font-size: 28px;
-        font-weight: 700;
-        color: @grey;
-        text-decoration: none;
-        &:hover {
-            text-decoration: underline;
-            &::before {
-                opacity: 1;
-                text-decoration: none;
-            }
-        }
-
-        &::before {
-            content: '#';
-            position: absolute;
-            left: -22px;
-            opacity: 0;
-            transition: .2s;
-        }
-    }
-}
-
-hr {
-    width: 95%;
-    margin: 0 auto;
-    border-style: groove;
-    color: lighten(@grey, 10%);
-}
-
-
 #video {
     display: block;
     margin: 30px auto 0;
@@ -175,23 +193,6 @@ hr {
         }
     }
 }
-
-
-.button {
-    border: 1px solid lighten(@grey, 30%);
-    border-radius: 3px;
-    color: lighten(@grey, 30%);
-    font-size: 20px;
-    text-decoration: none;
-
-    transition: border-color, color .2s;
-
-    &:hover {
-        border-color: @grey;
-        color: @grey;
-    }
-}
-
 
 .collection {
     display: flex;
@@ -211,7 +212,6 @@ hr {
     .info {
         display: flex;
         flex-direction: column;
-
         flex-grow: 1;
         padding: 0 30px 20px;
 
@@ -250,8 +250,7 @@ hr {
     }
 }
 
-
-.instruction {
+#instruction {
     width: 80%;
     margin: 30px auto 40px;
     text-align: center;        
@@ -263,7 +262,7 @@ hr {
 
     input {
         display: block;
-        margin: 15px auto;
+        margin: 20px auto;
     }
 
     #email {
@@ -278,7 +277,7 @@ hr {
 }
 
 
-/* ----------------------------- Footer Section ---------------------------- */
+/* --------------------------------- Footer -------------------------------- */
 
 footer {
     display: flex;
